# quickstart

./: .gitignore  README.md  __init__.py  control_loop.py  imu.py  install_audio_dependencies.sh  launch_nodes.sh  mqtt_utils.py  pyproject.toml  roomba.py  roomba_mode.sh  setup.py  talktuah.py  xbox.py
balance_control/: .gitignore  README.md  imu.py  imu_ahrs_filter.py  lqr.py  lqr_balance.py  madgwickahrs.py  main.py  motor_direction_test.py  odesc_config.py  odesc_uart.py  plot_results.py
config/: bot_quickstart.toml
examples/: example_depth.py  example_depth_fast.py  example_depth_rerun.py  example_follow.py  example_hand_gestures.py  example_kokoro.py  example_localization.py  example_rerun.py  example_wasd.py  example_yolo.py  lqr_balance_pubsub.py  velocity_publisher.py  web_interface.html
examples/noCode/: README.md
lib/: camera.py  odrive_uart.py  utils.py
localization/: localization_imu_enc.py
localization/config/: base_loc_conf.yaml  imu_params_conf.yaml
localization/filtering/: ekf.py  filtering_utils.py
localization/modelling/: spline_smoothing.py  wheel_encoder_mm.py
localization/preprocessor/: imu_preprocessing.py
localization/utils/: input_processing.py  static_initializer.py
mapping/: grid_helpers.py  mapping_wavemap.py  wv_manager.py
mapping/config/: base_map_conf.yaml  realsense_phys_config.yaml
messages/: bot_quickstart_msgs.toml  generate_mqtt_messages.py
nodes/: node_control.py  node_drivepath.py
planning/: d_star.py  dstar.py  lookahead_controller.py  main.py
setup/: README.md  calibrate_drive.py  calibrate_stereo_camera.py  setup_os.sh
setup/extras/: README.md  create_custom_boot_service.sh  pwm-pi5.dts  setup_hardware_pwm.sh  setup_realsense.sh
src/bracket_bot/: robot_motion.py  text_to_code.py  text_to_command.py  transcribe.py
tests/: test_microphone_with_led.py  test_speaker.py  test_speaker_with_led.py  test_tts.py  test_tts_with_led.py
utils/: constants.py  logging_utils.py  mqtt_utils.py  paths.py  replay_buffer.py  timestamp_accumulator.py  topic_to_message_type.py  traj_utils.py
utils/messages/: accel_data_msg.py  extended_pose_w_bias_msg.py  gyro_data_msg.py  mqtt_message_base.py  occupancy_grid_msg.py  raw_imu_data_msg.py  trajectory_msg.py  (+1 more)
